# Wasm-cloud-computing-benchmark-suite

./: README.md
benchmark/: .gitignore
benchmark/results/: ml_d10_c100.pkl  ml_d10_c1000.pkl  ml_d10_c1000_1733156417497385565.pkl  ml_d10_c10_1733018070243867624.pkl  ml_d10_c1500_1733145880572373004.pkl  ml_d10_c2000.pkl  ml_d10_c50.pkl  ml_d10_c500.pkl  ml_d1_c1000_1733155100562446568.pkl  ml_d1_c10_1733150518311622273.pkl  ml_d1_c10_1733154520707635486.pkl  ml_d1_c10_1733155079831329125.pkl  ml_d20_c1000.pkl  ml_d20_c1000_1733081046884001419.pkl  ml_d20_c1000_1733081157885519987.pkl  ml_d20_c1000_1733145113405929556.pkl  ml_d20_c1250_1733145183754776241.pkl  ml_d20_c1375_1733145228986867069.pkl  ml_d20_c1430_1733145321836931498.pkl  ml_d20_c1460_1733145380975846001.pkl  ml_d20_c1480_1733145429776295599.pkl  ml_d20_c1490_1733145475231962741.pkl  ml_d20_c1499_1733145525741711404.pkl  ml_d20_c1500_1733145709516395422.pkl  ml_d20_c1500_1733145759819037569.pkl  ml_d20_c1500_1733145796596527762.pkl  ml_d20_c1500_1733145837936096282.pkl  ml_d20_c150_1733081621735545127.pkl  ml_d20_c150_1733081690165255511.pkl  ml_d20_c700_1733081734226512800.pkl  ml_d20_c700_1733081752644190750.pkl  ml_d20_c900_1733081183117605637.pkl  ml_d20_c900_1733144846008653758.pkl  ml_d20_c900_1733144903638328777.pkl  ml_d20_c900_1733144955342099073.pkl  ml_d2_c1000_1733156228253148063.pkl  ml_d2_c1000_1733156247734772493.pkl  ml_d2_c1000_1733156336141243834.pkl  ml_d2_c1000_1733156357034285477.pkl  ml_d2_c1500_1733156271161859782.pkl  (+11 more)
benchmark/results/machine_learning/: ml_native_d1_c100.pkl
benchmark/results/processed_data/: processed_data.pkl
benchmark/results/raw_data/machine_learning/: ml_native_d10_c1000.pkl  ml_native_d10_c2000.pkl  ml_native_d10_c3000.pkl  ml_native_d10_c4000.pkl  ml_native_d10_c5000.pkl  ml_native_d10_c6000.pkl  ml_native_d1_c100.pkl  ml_native_d1_c200.pkl  ml_native_d1_c300.pkl  ml_native_d1_c400.pkl  ml_native_d1_c500.pkl  ml_native_d1_c600.pkl  ml_native_d1_c700.pkl  ml_native_d1_c800.pkl  ml_native_d1_c900.pkl  ml_native_d20_c12000.pkl  ml_native_d20_c15000.pkl  ml_native_d20_c18000.pkl  ml_native_d20_c24000.pkl  ml_native_d20_c3000.pkl  ml_native_d20_c6000.pkl  ml_native_d20_c9000.pkl  ml_native_d30_c100.pkl  ml_native_d30_c1000.pkl  ml_native_d30_c1100.pkl  ml_native_d30_c1150.pkl  ml_native_d30_c1200.pkl  ml_native_d30_c12000.pkl  ml_native_d30_c1300.pkl  ml_native_d30_c1400.pkl  ml_native_d30_c1450.pkl  ml_native_d30_c1500.pkl  ml_native_d30_c15000.pkl  ml_native_d30_c1600.pkl  ml_native_d30_c1700.pkl  ml_native_d30_c1750.pkl  ml_native_d30_c1800.pkl  ml_native_d30_c1900.pkl  ml_native_d30_c200.pkl  ml_native_d30_c2000.pkl  (+85 more)
benchmark/src/: analysis.py  bench.py  clients.py  main.py  new_analysis.py  requirements.txt
minimal-example/: foo.c  foo.wasm  index.html
miscellaneous/minimal-example/: run.sh  script.js
miscellaneous/tiny-threads-example/: threads.c
results/: ml_d30_c1000_1733019193923971611.pkl  ml_d30_c100_1733019154292541155.pkl  ml_d30_c10_1733021095863318025.pkl  ml_d30_c30_1733021210526033232.pkl  ml_d30_c4_1733020233452958008.pkl  ml_d30_c50_1733021252471953655.pkl  ml_d30_c5_1733020270876352486.pkl  ml_d90_c10_1733019050801412806.pkl  ml_d90_c1_1733018260494211653.pkl  ml_d90_c5_1733018377508959623.pkl
tiny-threads-example/: README.md  threads.wasm
workloads/: .gitignore
workloads/machine_learning/: CMakeLists.txt
workloads/machine_learning/wasm-src/: CMakeLists.txt  ml_server.c  tcp_client_mod.c
workloads/no_sql_db/: CMakeLists.txt
workloads/no_sql_db/wasm-src/: CMakeLists.txt  dbmem.c  no_sql_db.c  old.txt
workloads/relational_db/: CMakeLists.txt
workloads/relational_db/wasm-src/: CMakeLists.txt  relational_db.c
workloads/rldb/: CMakeLists.txt
workloads/rldb/wasm-src/: CMakeLists.txt  server
(+36 files in other folders)
